welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:5: error: 'while' expected but 'if' found.
	} if (isFacingTrail==true)
          ^SlugHunting:9: error: '(' expected but '}' found.
}
^