welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    	do {
     avance();
	} if (isFacingTrail==true)
	else {
	gauche();
	}
}
def isFacingTrail():Boolean = {
    if (estFaceMur) {
    	return false;
    }
    avance();
    var trace:Boolean=getCouleurSol()==Color.green;
    recule();
    return trace;
}        
do {
    avance()
} while (isFacingTrail==true)
